# nasvetlo-mvp

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: ADR.md  PROMPT_CHANGELOG.md  RUNBOOK.md
nasvetlo/: __main__.py  cli.py  config.py  db.py  llm.py  logging_utils.py  models.py  settings.py
nasvetlo/analytics/: feedback.py  tracker.py  trends.py
nasvetlo/clustering/: clusterer.py  coherence.py  embeddings.py
nasvetlo/drafting/: context_expander.py  headline_optimizer.py  legal_reviewer.py  safety.py  self_edit.py  seo.py  source_summaries.py  synthesis.py  writer.py
nasvetlo/entities/: __init__.py  explainer.py  extractor.py  graph.py
nasvetlo/events/: __init__.py  context.py  registry.py
nasvetlo/ingestion/: normalize.py  rss.py
nasvetlo/pipeline/: daemon.py  run_once.py
nasvetlo/prompts/: article_writer.txt  coherence_validator.txt  context_expander.txt  entity_explainer.txt  entity_extractor.txt  headline_optimizer.txt  legal_reviewer.txt  safety_classifier_json.txt  search_question_generator.txt  self_edit.txt  seo_fields_json.txt  source_summary_json.txt
nasvetlo/publishing/: telegram.py  telegram_channel.py  wordpress.py
nasvetlo/scoring/: importance.py
nasvetlo/scripts/: backfill_events.py  migrate_add_entities.py  migrate_add_entity_explainer.py  migrate_add_event_registry.py  migrate_add_headline_variants.py  migrate_add_legal_review.py  (+3 more)
scripts/: migrate_wp_to_web.py  setup_server.sh
tests/: conftest.py  test_clustering.py  test_importance.py  test_normalize.py  test_pipeline_dry_run.py
(+33 files in other folders)
